Add e2e test and fix bugs